--- a/project1.html
+++ b/project1.html
@@ -7,11 +7,41 @@
 
 <h1>This is a website </h1>
 <h1>This is a heading</h1>
+
 <p style="color:red">My name is kent</p>
+
 <p> This is a paragraph</p>
+
 <a href="https://www.google.com">Click this liink</a>
+
 <img src="black.jpg" alt="Black picture" width="200" height="200">
 
+<p title="Example1">
+	Paragraph example.
+</p>
+
+<h1 style="font-size:120px;">heading 1</h1>
+
+<pre>
+<p> Line <br> breaks </p>
+</pre>
+
+<body style="background-color:powderblue;">
+	<h1 style="font-family:verdana;">This is a website </h1>
+	<h1>This is a heading</h1>
+	<h1 style="text-align: center;">Centered Heading</h1>
+	<b>Create 10</b>
+	<sub> this is a subscript</sub>
+
+
+</body>
+<!--
+	comment
+-->
+
+
+	
+</body>
 
 
 </body>
