--- a/project2.html
+++ b/project2.html
@@ -5,7 +5,18 @@
 </head>
 <body>
 	<h1>This is a heading</h1>
-	
+
+	<div>
+		<a href="https://kenttoha.github.io/ProjectKent/project1.html" target="_blank">click this to see previous project</a>
+	</div>
+<style>
+	a:link {
+		color: white;
+		background-color: green;
+		text-decoration: italic;
+	}
+</style>
+
 
 </body>
 </html>
