--- a/project2.html
+++ b/project2.html
@@ -16,6 +16,11 @@
 		text-decoration: italic;
 	}
 </style>
+<a href="https://youtube.com">
+<img src="black.jpg" alt="black image" style="width:50px;height:100px;border:0;">
+</a>
+<h1> id="C2">chapter 2</h1>
+<a href="#C2">go to chapter 2 </a>
 
 
 </body>
