--- a/quiz.html
+++ b/quiz.html
@@ -13,13 +13,14 @@
 
 
 	<form class="questions">
-		<input type="radio" name="Answer"> <span id="choice1"> </span> </input><br>
-		<input type="radio" name="Answer"> <span id="choice2"> </span> </input><br>
-		<input type="radio" name="Answer"> <span id="choice3"> </span> </input><br>
-		<input type="radio" name="Answer"> <span id="choice4"> </span> </input><br>
+		<input type="radio" name="Answer" value="ans1"> <span id="choice1"> </span> </input><br>
+		<input type="radio" name="Answer" value="ans2"> <span id="choice2"> </span> </input><br>
+		<input type="radio" name="Answer" value="ans3"> <span id="choice3"> </span> </input><br>
+		<input type="radio" name="Answer" value="ans4"> <span id="choice4"> </span> </input><br>
 	</form>
     <!-- show answer -->
 	<button id="confirmAnswer">Confirm Answer</button>
+	<p><span id="score"></span></p>
 
 
 
