--- a/quiz.html
+++ b/quiz.html
@@ -12,8 +12,8 @@
 	<!-- Question -->
 	<p><span id="Question"></span></p>
 	<!--  multiple choice -->
-<div>
-	<form class="questions">
+<div id="questions">
+	<form>
 		<input type="radio" name="Answer" value="ans1"> <span id="choice1"> </span><br>
 		<input type="radio" name="Answer" value="ans2"> <span id="choice2"> </span><br>
 		<input type="radio" name="Answer" value="ans3"> <span id="choice3"> </span><br>
@@ -24,8 +24,12 @@
 	<button id="confirmAnswer">Confirm Answer</button>
 	<br>
 	<button id="nextQuestion">Next Question</button>
+	<br>
+	<button id="retry"> Start Again</button>
+	<p> <span id="newQuestion"> </span></p>
 	<p id="feedback"></span></p>
 	<p> <span id="score"> </span></p>
+
 	
 
 
